# myovision-app

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  logging.yaml  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
backend/: __init__.py  agents.py  base.py  config.py  dependancies.py  dependencies.py  logger.py  main.py  models.py  redis.txt  services.py  settings.py  utils.py
backend/routers/: contours.py  inference.py  validation.py
checkpoints/: checkpoints.txt
data/: fe1_data.json  fe2_data.json  fe3_data.json  info_data.json
images/: info.txt
static/images/: info.txt
