[tool.poetry]
package-mode = false
name = "myovision-app"
version = "0.1.0"
description = "A RESTful API for myovision project"
authors = ["Noza23 <g.nozadze2311@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
redis = {extras = ["hiredis"], version = "^5.2.1"}
read-roi = "^1.6.0"
myosam = {git = "https://github.com/Noza23/myovision-sam.git", rev = "main", extras = ["all"]}
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["I"]
extend-select = ["I", "T"]
